# avo

./: .gitignore  AvoGUI winapi.cpp  AvoGUI winapi.hpp  AvoGUI.cpp  AvoGUI.hpp  CMakeLists.txt  CONTRIBUTING.md  Font data.hpp  LICENSE  Pi day!.cpp  README.md  Source.cpp  Test.cpp  coding guidelines.txt  gcc_bug_minimal_code.cpp  ideas and to do.txt  to do.txt
Test programs/: Animations test.cpp  Bouncing ball.cpp  Drag and drop.cpp  Four in a row.cpp  Icons.cpp  Image Viewer.cpp  Linux testing.cpp  Mandelbrot set.cpp  Mouse events.cpp  New animations.cpp  Pi day!.cpp  Snowflake fractal.cpp  Test programs.md  Test.cpp  Utility examples.cpp  boids.cpp  graphics tests.cpp  readme.md
Test programs/Mandelbrot set/: Mandelbrot set.cpp  Mandelbrot set.hpp
Test programs/Snake/: App.hpp  Button.hpp  Leaderboard.hpp  StartScreen.hpp  Strings.hpp  Theme.hpp  entry.cpp
Test programs/Timer/: IconButton.cpp  IconButton.hpp  MainScreen.cpp  MainScreen.hpp  Parameters.hpp  TimeoutScreen.cpp  TimeoutScreen.hpp  Timer.cpp  Timer.hpp
cmake/: AvoConfig.cmake.in  AvoGUIConfig.cmake.in
examples/: Bouncing ball.cpp  CMakeLists.txt  Drag and drop.cpp  Image Viewer.cpp  Mouse events.cpp  Nested theming.cpp  New animations.cpp  Snowflake fractal.cpp  Test.cpp  Utility examples.cpp  atomic_flag_deadlock.cpp  basic_graphics.cpp  deadlock_debugging.cpp  key_state_test.cpp  readme.md  test.cpp  window_test.cpp
examples/Snake/: App.hpp  Leaderboard.hpp  StartScreen.hpp  Strings.hpp  Theme.hpp  entry.cpp
examples/Timer/: IconButton.cpp  IconButton.hpp  MainScreen.hpp  TimeoutScreen.hpp  Timer.cpp  Timer.hpp
include/: Avo.hpp  AvoGUI.hpp  AvoGUI_old.hpp  avo.hpp  font_data.hpp
include/avo/: AvoGUI_old.hpp  avo.hpp  concurrency.hpp  event_listeners.hpp  font_data.hpp  graphics.hpp  gui.hpp  id.hpp  math.hpp  miscellaneous.hpp  node.hpp  unicode.hpp  util.hpp  utils.hpp  window.hpp
include/avo/graphics/: color.hpp  context.hpp  miscellaneous.hpp
include/avo/gui/: theme.hpp
include/avo/math/: angle.hpp  arithmetic_wrapper.hpp  easing.hpp  miscellaneous.hpp  operations.hpp  random.hpp  rectangle.hpp  transform.hpp  vector2d.hpp
include/avo/util/: circular_stack_buffer.hpp  concepts.hpp  enumerate_view.hpp  generate_view.hpp  int_range.hpp  miscellaneous.hpp  recursive_range.hpp  static_map.hpp  static_vector.hpp  unique_handle.hpp
include/avo/utils/: concepts.hpp  enumerate_view.hpp  generate_view.hpp  int_range.hpp  miscellaneous.hpp  recursive_range.hpp  static_map.hpp  static_vector.hpp  unique_handle.hpp
legacy/: AvoGUI_old.cpp  AvoGUI_old.hpp
source/: Avo.cpp  AvoGUI.cpp  AvoGUI_old.cpp  CMakeLists.txt  unicode.cpp  window.cpp
source/linux/: window.hpp
source/unix/: unicode.hpp
source/windows/: common.hpp  unicode.hpp  window.hpp
tests/: CMakeLists.txt  concurrency.cpp  enumerate.cpp  event_listeners.cpp  flatten.cpp  formatting.cpp  generator.cpp  id.cpp  id.hpp  node.cpp  parents.cpp  static_map.cpp  test_main.cpp  testing_header.hpp  unicode.cpp  unicode_conversion.cpp  unordered_erase.cpp  vector2d.cpp
tests/graphics/: color.cpp  miscellaneous.cpp
tests/gui/: theme.cpp
tests/math/: angle.cpp  arithmetic_wrapper.cpp  easing.cpp  miscellaneous.cpp  operations.cpp  random.cpp  rectangle.cpp  transform.cpp  vector2d.cpp
tests/util/: circular_stack_buffer.cpp  enumerate_view.cpp  generate_view.cpp  int_range.cpp  miscellaneous.cpp  recursive_range.cpp  static_map.cpp  static_vector.cpp  unique_handle.cpp
tests/utils/: concepts.cpp  enumerate_view.cpp  generate_view.cpp  int_range.cpp  miscellaneous.cpp  recursive_range.cpp  static_map.cpp  static_vector.cpp  unique_handle.cpp
